Add jar-with-dependencies